--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 				<h6>XMLHttpRequest (Old API)</h6>
 				<button type="button" onclick="loadAndShowJSON()">Show JSON
 					Data</button>
-				<div id="showJSONDataHere"></div>
+				<div style="font-size:12px;" id="showJSONDataHere"></div>
 			</div>
 
 			<div class=" col-md-6 mt-3 mb-3">
@@ -92,14 +92,6 @@
 					</tbody>
 				</table>
 			</div>
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
-			<br />
 		</div>
 	</div>
 </body>
