--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,13 +39,14 @@
 				<h6>XMLHttpRequest (Old API)</h6>
 				<button type="button" onclick="loadAndShowJSON()">Show JSON
 					Data</button>
-				<div style="font-size:12px;" id="showJSONDataHere"></div>
+				<div style="font-size: 12px;" id="showJSONDataHere"></div>
 			</div>
 
 			<div class=" col-md-6 mt-3 mb-3">
 				<h6>AutoLoad Using Fetch (New API)</h6>
-				<button type="button" id="disableThisButton">No Action Required</button>
-				<table class="table table-striped">
+				<button type="button" id="disableThisButton">No Action
+					Required</button>
+				<table table-sm class="table table-sm table-striped">
 					<tr class="bg-light">
 						<th>id</th>
 						<th>username</th>
@@ -63,7 +64,7 @@
 				<button type="button" onclick="drawDataInTable()">Click To
 					Load</button>
 
-				<table class="table table-striped">
+				<table table-sm class="table table-sm table-borderless">
 					<tr class="bg-light">
 						<th>id</th>
 						<th>username</th>
@@ -76,10 +77,13 @@
 					</tbody>
 				</table>
 			</div>
-			<div class=" col-md-6 mt-3 mb-3">
-				<button type="button" onclick="userIdBasedDetails()">Populate/Get User Id(s)</button>
-				<select class="form-select form-select-sm mt-2 mb-2" id="select3"></select>
-				<table class="table table-borderless">
+			<div class="col-md-6 mt-3 mb-3">
+				<button type="button" onclick="userIdBasedDetails()">Populate/Get
+					User Id(s)</button>
+				<div class="col-md-3">
+					<select class="form-select form-select-sm mt-2 mb-2" id="select3"></select>
+				</div>
+				<table table-sm class="table table-sm table-borderless">
 					<tr class="bg-light">
 						<th>id</th>
 						<th>username</th>
@@ -104,6 +108,7 @@
 <script type="text/javascript" th:src="@{/js/onbuttonclickload.js}"></script>
 <script type="text/javascript" th:src="@{/js/showjson.js}"></script>
 <script type="text/javascript" th:src="@{/js/dynamicdropdown.js}"></script>
+<!-- <script type="text/javascript" th:src="@{/js/onclickforselect.js}"></script> -->
 
 
 </html>
