--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<div class="container">
-		<div class="mt-3"></div>
+		<div class="mt-3 col-md-12">
+		<a href="/modal" th:href="@{/modal}">Modal Page</a>
+		</div>
 		<div class="row">
 
 			<div class=" col-md-6 mt-3 mb-3">
