--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,6 +72,7 @@
 						<th>username</th>
 						<th>useremail</th>
 						<th>useraddress</th>
+						<th>Action</th>
 					</tr>
 
 					<tbody id="appDataTable2">
