--- a/src/main/resources/templates/modal.html
+++ b/src/main/resources/templates/modal.html
@@ -95,9 +95,9 @@
 
 		<div id="simpleModal_7" class="modal">
 			<div class="modal-window">
-				<h3>Dismiss with a the button</h3>
+				<h3>Dismiss with a button</h3>
 				<p>Pure Java Script based Modal Dialog. Feel the speed.!</p>
-				<button data-dismiss="modal">Close</button>
+				<button data-dismiss="modal" class="btn btn-sm btn-primary">Close</button>
 			</div>
 		</div>
 	</div>
