--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 	<div class="container">
-		<div class="mt-3 col-md-12">
-		<a href="/modal" th:href="@{/modal}">Modal Page</a>
+		<div class="mt-3 row">
+		<div class="col-md-3"><a href="/modal" th:href="@{/modal}">Modal Page</a></div>
+		<div class="col-md-3"><a href="/crud" th:href="@{/crud}">CRUD Example</a></div>
+		
 		</div>
 		<div class="row">
 
