--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Html CRUD with Pure JavaScript</title>
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
@@ -11,48 +10,101 @@
 
 
 	<div class="container">
-		<div class="mt-3 col-md-12">
-			<a href="/" th:href="@{/}">Index/Home Page</a>
+		<div class="mt-3 row">
+			<div class="col-md-3">
+				<a href="/modal" th:href="@{/modal}">Modal Page</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud" th:href="@{/crud}">CRUD Example</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
+			</div>
+
 		</div>
 		<br /> <br />
+
+
 		<form onsubmit="event.preventDefault();onFormSubmit();"
 			autocomplete="off">
-			<div class=" col-md-6 mt-3 mb-3">
-				<div>
-					<label>Full Name*</label><label class="validation-error hide"
-						id="fullNameValidationError">This field is required.</label> <input
-						type="text" name="fullName" id="fullName">
+
+			<div class="row mb-2">
+				<div class="col-md-3 text-right font-weight-bold">
+					<label for="fullName" class="form-label">Name*</label>
 				</div>
-				<div>
-					<label>EMP Code</label> <input type="text" name="empCode"
-						id="empCode">
+				<div class="col-md-9">
+					<div class="input-group">
+						<input type="text" class="form-control form-control-sm"
+							name="fullName" id="fullName"> <label
+							class="validation-error hide" id="fullNameValidationError">This
+							field is required.</label>
+					</div>
 				</div>
-				<div>
-					<label>Salary</label> <input type="text" name="salary" id="salary">
+			</div>
+
+
+			<div class="row mb-2">
+				<div class="col-md-3 text-right font-weight-bold">
+					<label for="empCode" class="form-label">EMP Code</label>
 				</div>
-				<div>
-					<label>City</label> <input type="text" name="city" id="city">
+				<div class="col-md-9">
+					<div class="input-group">
+						<input type="text" class="form-control form-control-sm"
+							name="empCode" id="empCode">
+					</div>
 				</div>
-				<div class="form-action-buttons">
+			</div>
+
+			<div class="row mb-2">
+				<div class="col-md-3 text-right font-weight-bold">
+					<label for="state" class="form-label">State</label>
+				</div>
+				<div class="col-md-9">
+					<div class="input-group">
+						<input type="text" class="form-control form-control-sm"
+							name="state" id="state">
+					</div>
+				</div>
+			</div>
+
+			<div class="row mb-2">
+				<div class="col-md-3 text-right font-weight-bold">
+					<label for="city" class="form-label">City</label>
+				</div>
+				<div class="col-md-9">
+					<div class="input-group">
+						<input type="text" class="form-control form-control-sm"
+							name="city" id="city">
+					</div>
+				</div>
+			</div>
+
+			<div class="row mt-3 mb-3">
+				<div class="col-md-3 text-right font-weight-bold"></div>
+				<div class="col-md-9">
 					<input type="submit" value="Submit"
 						class="btn btn-sm btn-primary btn-block">
 				</div>
 			</div>
-		</form>
-		<table class="list" id="employeeList">
-			<thead>
-				<tr>
-					<th>Full Name</th>
-					<th>EMP Code</th>
-					<th>Salary</th>
-					<th>City</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
 
-			</tbody>
-		</table>
+		</form>
+		<div class="row mt-3 mb-3">
+			<div class="col-md-3 text-right font-weight-bold"></div>
+			<div class="col-md-9">
+				<table class="table list" id="dataTable">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>EMP Code</th>
+							<th>State</th>
+							<th>City</th>
+							<th>Action</th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
+			</div>
+		</div>
 	</div>
 </body>
 <script type="text/javascript" th:src="@{/js/crud.js}"></script>
