--- a/src/main/resources/templates/crud2.html
+++ b/src/main/resources/templates/crud2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Html CRUD with Pure JavaScript</title>
 <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
@@ -9,30 +8,33 @@
 
 <body>
 	<div class="container">
-		<div class="mt-3 col-md-12">
-			<a href="/" th:href="@{/}">Index/Home Page</a>
+		<div class="mt-3 row">
+		<div class="col-md-3"><a href="/modal" th:href="@{/modal}">Modal Page</a></div>
+		<div class="col-md-3"><a href="/crud" th:href="@{/crud}">CRUD Example</a></div>
+		<div class="col-md-3"><a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a></div>
+		
 		</div>
 		<br /> <br />
-		<h2 class="heading">Javascript crud app</h2>
+		<h4 class="text-primary">Pure JavaScript CRUD - Edit Inline</h4>
 
 		<div class="adduser">
 			<!-- add user -->
 			<div class="row">
 				<div class="col-md-12">
-					<p>ADD USER</p>
+					<p>Add Record</p>
 				</div>
 				<div class="col-md-10">
 					<input type="text" class="form-control" id="data">
 				</div>
 				<div class="col-md-2">
 					<button type="button" class="btn btn-primary" id="addUser"
-						onclick="addUser();">Add User</button>
+						onclick="addUser();">Add</button>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12">
 					<br>
-					<p>USERS LIST</p>
+					<p>List</p>
 				</div>
 			</div>
 			<div class="user" id="userList"></div>
