--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="container">
 		<div class="mt-3 row">
+		<div class="col-md-3"><a href="/" th:href="@{/}">Home Page</a></div>
 		<div class="col-md-3"><a href="/modal" th:href="@{/modal}">Modal Page</a></div>
 		<div class="col-md-3"><a href="/crud" th:href="@{/crud}">CRUD Example</a></div>
 		<div class="col-md-3"><a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a></div>
