--- a/src/main/resources/templates/modal.html
+++ b/src/main/resources/templates/modal.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 	<div class="container">
-	<div class="mt-3 col-md-12">
-		<a href="/" th:href="@{/}">Index/Home Page</a>
-		</div>
+	<div class="mt-3 row">
+		<div class="col-md-3"><a href="/" th:href="@{/}">Home Page</a></div>
+		<div class="col-md-3"><a href="/modal" th:href="@{/modal}">Modal Page</a></div>
+		<div class="col-md-3"><a href="/crud" th:href="@{/crud}">CRUD Example</a></div>
+		<div class="col-md-3"><a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a></div>
+	</div>
+		
 		<h3 class="mt-3 mb-3">Pure/Vanilla JavaScript Modal</h3>
 
 		<h4>Sizes</h4>
