--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -11,10 +11,24 @@
 
 	<div class="container">
 		<div class="mt-3 row">
-		<div class="col-md-3"><a href="/" th:href="@{/}">Home Page</a></div>
-		<div class="col-md-3"><a href="/modal" th:href="@{/modal}">Modal Page</a></div>
-		<div class="col-md-3"><a href="/crud" th:href="@{/crud}">CRUD Example</a></div>
-		<div class="col-md-3"><a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a></div>
+			<div class="col-md-3">
+				<a href="/" th:href="@{/}">Home Page</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/modal" th:href="@{/modal}">Modal Page</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud" th:href="@{/crud}">CRUD Example</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
+			</div>
+		</div>
+		<div class="mt-3 row">
+			<div class="col-md-3">
+				<a href="/jsontotable" th:href="@{/jsontotable}">JsonToTable</a>
+			</div>
+
 		</div>
 		<br /> <br />
 
