--- a/src/main/resources/templates/jsonToPresenTableView.html
+++ b/src/main/resources/templates/jsonToPresenTableView.html
@@ -33,33 +33,13 @@
 		<button type="button" onclick="drawHtmlTable()">Click To Load</button>
 		<div id="drawHtmlTableHere"></div>
 
-<div id="someContainer"></div>
-<!-- 		<button id="menu-button">Hide Menu</button> -->
-<!-- 		<nav id="menu"> -->
-<!-- 			<ul> -->
-<!-- 				<li>Item 1</li> -->
-<!-- 				<li>Item 2</li> -->
-<!-- 				<li>Item 3</li> -->
-<!-- 			</ul> -->
-<!-- 		</nav> -->
+		<div class="row mt-5">
+			<div id="someContainer"></div>
+		</div>
 
 	</div>
 </body>
 
-<script type="text/javascript" th:src="@{/js/jsontotable.js}"></script>
-<!-- <script type="text/javascript"> 
-// 	// Script to hide/show menu
-// 	var button = document.querySelector('#menu-button');
-// 	var menu = document.querySelector('#menu');
-// 	button.addEventListener('click', function(event) {
-// 		if (menu.style.display == "") {
-// 			menu.style.display = "none";
-// 			button.innerHTML = "Show Menu";
-// 		} else {
-// 			menu.style.display = "";
-// 			button.innerHTML = "Hide Menu";
-// 		}
-// 	});
-<!-- </script> -->
+<script type="text/javascript" th:src="@{/js/jsontopresentableview.js}"></script>
 
 </html>
