--- a/src/main/resources/templates/crud2.html
+++ b/src/main/resources/templates/crud2.html
@@ -26,6 +26,9 @@
 			<div class="col-md-3">
 				<a href="/jsontotable" th:href="@{/jsontotable}">JsonToTable</a>
 			</div>
+			<div class="col-md-3">
+				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
 
 		</div>
 		<br /> <br />
