--- a/src/main/resources/templates/jsonToPresenTableView.html
+++ b/src/main/resources/templates/jsonToPresenTableView.html
@@ -26,12 +26,12 @@
 			<div class="col-md-3">
 				<a href="/jsontotable" th:href="@{/jsontotable}">JsonToTable</a>
 			</div>
+			<div class="col-md-3">
+				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
 
 		</div>
 
-		<h6>Load On Click Using Fetch (New API)</h6>
-		<button type="button" onclick="drawHtmlTable()">Click To Load</button>
-		<div id="drawHtmlTableHere"></div>
 
 		<div class="row mt-5">
 			<div id="someContainer"></div>
