--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -28,6 +28,10 @@
 			<div class="col-md-3">
 				<a href="/jsontotable" th:href="@{/jsontotable}">JsonToTable</a>
 			</div>
+			<div class="col-md-3">
+				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
+			
 
 		</div>
 		<br /> <br />
