--- a/src/main/resources/templates/modal.html
+++ b/src/main/resources/templates/modal.html
@@ -27,6 +27,9 @@
 			<div class="col-md-3">
 				<a href="/jsontotable" th:href="@{/jsontotable}">JsonToTable</a>
 			</div>
+			<div class="col-md-3">
+				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
 
 		</div>
 		<h3 class="mt-3 mb-3">Pure/Vanilla JavaScript Modal</h3>
