--- a/src/main/resources/templates/jsonToPresenTableView.html
+++ b/src/main/resources/templates/jsonToPresenTableView.html
@@ -32,9 +32,26 @@
 
 		</div>
 
-
 		<div class="row mt-5">
-			<div id="someContainer"></div>
+			<div class="col-md-6">
+				<div id="someContainer"></div>
+			</div>
+			<div class="col-md-6">
+				<button type="button" onclick="displayUsers()">Click To
+					Load</button>
+				<table class="mt-3 table table-sm table-borderless">
+					<tr class="bg-light">
+						<th>id</th>
+						<th>username</th>
+						<th>useremail</th>
+						<th>useraddress</th>
+					</tr>
+
+					<tbody id="userDataTable">
+
+					</tbody>
+				</table>
+			</div>
 		</div>
 
 	</div>
