--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -15,14 +15,15 @@
 				<a href="/" th:href="@{/}">Home Page</a>
 			</div>
 			<div class="col-md-3">
+				<a href="/index" th:href="@{/index}">Index Page</a>
+			</div>
+			<div class="col-md-3">
 				<a href="/modal" th:href="@{/modal}">Modal Page</a>
 			</div>
 			<div class="col-md-3">
 				<a href="/crud" th:href="@{/crud}">CRUD Example</a>
 			</div>
-			<div class="col-md-3">
-				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
-			</div>
+
 		</div>
 		<div class="mt-3 row">
 			<div class="col-md-3">
@@ -31,7 +32,9 @@
 			<div class="col-md-3">
 				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
 			</div>
-			
+			<div class="col-md-3">
+				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
+			</div>
 
 		</div>
 		<br /> <br />
