--- a/src/main/resources/templates/crud2.html
+++ b/src/main/resources/templates/crud2.html
@@ -13,14 +13,15 @@
 				<a href="/" th:href="@{/}">Home Page</a>
 			</div>
 			<div class="col-md-3">
+				<a href="/index" th:href="@{/index}">Index Page</a>
+			</div>
+			<div class="col-md-3">
 				<a href="/modal" th:href="@{/modal}">Modal Page</a>
 			</div>
 			<div class="col-md-3">
 				<a href="/crud" th:href="@{/crud}">CRUD Example</a>
 			</div>
-			<div class="col-md-3">
-				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
-			</div>
+
 		</div>
 		<div class="mt-3 row">
 			<div class="col-md-3">
@@ -28,6 +29,9 @@
 			</div>
 			<div class="col-md-3">
 				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
 			</div>
 
 		</div>
