--- a/src/main/resources/templates/jsonToTable.html
+++ b/src/main/resources/templates/jsonToTable.html
@@ -12,13 +12,13 @@
 				<a href="/" th:href="@{/}">Home Page</a>
 			</div>
 			<div class="col-md-3">
+				<a href="/index" th:href="@{/index}">Index Page</a>
+			</div>
+			<div class="col-md-3">
 				<a href="/modal" th:href="@{/modal}">Modal Page</a>
 			</div>
 			<div class="col-md-3">
 				<a href="/crud" th:href="@{/crud}">CRUD Example</a>
-			</div>
-			<div class="col-md-3">
-				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
 			</div>
 
 		</div>
@@ -28,6 +28,9 @@
 			</div>
 			<div class="col-md-3">
 				<a href="/jsontopresentable" th:href="@{/jsontopresentable}">JsonToPresenTable</a>
+			</div>
+			<div class="col-md-3">
+				<a href="/crud2" th:href="@{/crud2}">CRUD 2 Example</a>
 			</div>
 
 		</div>
